data iteration done image aligned/font-fixed/responsive

--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,24 @@ padding: 20px
 }
 .data{
     width: 90%;
+    
 }
 .input{
     width:100%;
     height: 25px;
 }
 @media only screen and (min-width: 400px) {
-    
-  }
+    .data{
+        font-size: 0.73em;
+        margin-left: 75px;
+        padding: 6px;
+        margin-top: -7px;
+}
+    }
+    @media only screen and (min-width: 768px) {
+        .data{
+            font-size: 16px;
+            display:flex;
+            justify-content: space-between;
+        }
+    }
